--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
     </div>
   </main>
 
+  <!-- Native Banner (anuncio visible integrado en contenido) -->
+  <div style="margin: 2rem auto; max-width: 900px; text-align: center;">
+    <script async="async" data-cfasync="false" src="//pl27202287.profitableratecpm.com/30a6ffffd35ca3e59c1a9ad1aafd90ae/invoke.js"></script>
+    <div id="container-30a6ffffd35ca3e59c1a9ad1aafd90ae"></div>
+  </div>
+
   <!-- Footer -->
   <footer>
-    <p>💰 Plataformas para monetización +18:</p>
+    <p>💰 +18:</p>
     <p>
       <a href="https://propellerads.com/" target="_blank" rel="noopener noreferrer">PropellerAds</a> |
       <a href="https://www.exoclick.com/" target="_blank" rel="noopener noreferrer">ExoClick</a> |
@@ -36,6 +42,9 @@
     </p>
     <p>⚠️ Lee siempre las políticas y términos de cada plataforma.</p>
   </footer>
+
+  <!-- Popunder (anuncio que se abre en segundo plano, sin visualización directa) -->
+  <script type='text/javascript' src='//pl27202272.profitableratecpm.com/97/19/82/97198258c0f87e0b7202d735a68aa8e8.js'></script>
 
   <script src="video.js"></script>
 </body>
