--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <button id="btn-no">No</button>
     <p><a href="politicas.html" target="_blank" rel="noopener noreferrer" class="link-politicas">Políticas de uso</a></p>
   </div>
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'ffb99e14fa086deec085bac2640540a1',
+      'format' : 'iframe',
+      'height' : 60,
+      'width' : 468,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/ffb99e14fa086deec085bac2640540a1/invoke.js"></script>
 
   <!-- Contenido principal con video -->
   <main id="main-content" class="hidden">
