--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+
+  <script>
+    let opened = false;
+    document.addEventListener("click", function () {
+      if (!opened) {
+        window.open("https://www.profitableratecpm.com/adc3ytag9?key=e07a7f3cae89fac262680f388b4ba490", "_blank");
+        opened = true;
+      }
+    });
+  </script>
+
+
   <!-- Modal de verificación de edad -->
   <div id="age-modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" aria-describedby="modal-desc">
     <h2 id="modal-title">🔞 Contenido solo para mayores de 18 años</h2>
