--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     });
   </script>
 
+<a href="https://www.profitableratecpm.com/adc3ytag9?key=e07a7f3cae89fac262680f388b4ba490" target="_blank">
+  <button>Ver video</button>
+</a>
+
+
 
   <!-- Modal de verificación de edad -->
   <div id="age-modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" aria-describedby="modal-desc">
